--- a/caravan/style.css
+++ b/caravan/style.css
@@ -1,3 +1,4 @@
+/* ブラウザがそれぞれ持っているCSSをリセットするための記述 */
 * {
   margin: 0;
   padding: 0;
@@ -9,81 +10,66 @@ a {
   text-decoration: none;
 }
 
-
-
 header {
-  width: 90%;
+  width: 90%; /* 横幅90% */
   padding: 15px 0;
   margin: 0 auto;
   text-align: center;
 }
 
-
 header .heading {
+  /* headerタグ内のheadingクラスにのみ反映される */
   font-size: 32px;
 }
-
-
-
 
 .nav-list {
   text-align: center;
   padding: 10px 0;
   margin: 0 auto;
 }
+
 .nav-list-item {
   list-style: none;
   display: inline-block;
   margin: 0 20px;
 }
 
-
-
-
 .main-visual {
-  width: 100%;
-  height: 300px;
+  width: 100%; /* 横幅いっぱい */
+  height: 300px; /* 高さ300px */
   background-image: url(img/mv.jpg);
-  background-size: cover;
-  background-position: center;
-
+  background-size: cover; /* 縦横比を維持したまま背景領域を埋め尽くす */
+  background-position: center; /* 背景画像を中央に配置 */
 }
 
 .main-visual-content {
-  width: 40%;
-  height: 300px;
-  background-color: rgba(0,0,0,0.5);
-  text-align: center;
-  padding-top: 105px;
-
-
+  width: 40%; /* 横幅40% */
+  height: 300px; /* 親の高さに揃える */
+  background-color: rgba(0, 0, 0, 0.5); /* 背景色を半透明の黒にする */
+  text-align: center; /* 文字を中央揃えにする */
+  padding-top: 105px; /* 上側の内側余白で垂直方向の位置を調整 */
 }
 
 .main-visual-text {
-  color: #fff;
-
+  color: #fff; /* 文字色を白に変更 */
 }
 
 .main-visual-name {
- margin-top: 30px;
- color: #fff;
-
+  margin-top: 30px; /* 上側の外側の余白 */
+  color: #fff; /* 文字色を白に変更 */
 }
 
 main {
-  width: 800px;
-  display: frex;
-  justify-content: center;
-  margin: 0 auto;
-  padding: 70px 0;
-
+  width: 800px; /* 横幅800px */
+  display: flex; /* Flexboxの利用 */
+  justify-content: center; /* 要素の横並び・中央寄せ */
+  margin: 0 auto; /* 要素の中央揃え */
+  padding: 70px 0; /* 上下に70px、左右に0pxの内側余白 */
 }
-
 
 .blog {
   width: 540px;
-  margin-right: 30px;
-
+  margin-right: 30px; /* 領域の右側余白 */
 }
 
 .blog-heading {
@@ -92,7 +78,7 @@ main {
   line-height: 0.6;
 }
 
-.blog-box  {
+.blog-box {
   padding-top: 50px;
 }
 
@@ -104,23 +90,21 @@ main {
   justify-content: flex-start;
 }
 
+.blog-image {
+  height: 180px;
+}
+
 .blog-text {
   padding: 25px 0 0 30px;
-
 }
 
 .blog-text-heading {
   padding-bottom: 15px;
 }
 
-.blog-image {
-  height: 180px;
-}
-
 .blog-date {
   font-size: 12px;
   display: inline-block;
-
 }
 
 .category {
@@ -132,15 +116,24 @@ main {
   font-size: 11px;
 }
 
+.pagination {
+  text-align: center;
+  padding-top: 50px;
+}
 
-
-
-
-
+.pagination p {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin: 0 5px;
+  color: #fff;
+  background-color: #acabab;
+  border-radius: 3px;
+  line-height: 30px;
+}
 
 .sidebar {
   width: 230px;
-
 }
 
 .common-heading {
@@ -181,7 +174,7 @@ main {
 }
 
 .instagram-box:nth-child(odd) {
-  margin: 0 10px 10px 0;
+  margin-right: 10px;
 }
 
 .instagram-box:nth-child(1) {
@@ -208,13 +201,9 @@ main {
   background-image: url(img/road.jpg);
 }
 
-
-
-
-
 footer {
-  width: 100%; /* 横幅いっぱい */
-  height: 120px; /* 高さ120px */
+  width: 100%;
+  height: 120px;
   text-align: center;
   line-height: 120px;
   background-color: #848282;
