--- a/caravan/style.css
+++ b/caravan/style.css
@@ -233,3 +233,65 @@ footer {
 }
 
 
+@media screen and (max-width: 425px) {
+  header {
+    width: 100%;
+  }
+
+  .nav-list {
+    width: 100%;
+  }
+
+  .main-visual {
+    width: 100%;
+  }
+  
+  main {
+    width: 100%;
+    display: block;
+  }
+  
+  .blog {
+    width: 100%;
+    margin: 0;
+  }
+  
+  .blog-box {
+    padding-left:2px;
+    padding-right:2px;
+  }
+  
+  .blog-image {
+    width: 49%;
+  }
+  
+  .blog-text {
+    width:49%;
+    padding-top: 5px;
+    
+  }
+  
+  .sidebar {
+    width:100%;
+  }
+  
+  .sidebar-contents {
+    width: 100%;
+    
+  }
+  
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+  
+  .pagination {
+    margin-bottom: 50px;
+  }
+  
+}
+
